INT-fix-34a11.9: Added CR on mercenary page for error messages per mercenary

--- a/design/templates/OpenGame/mrc_mercenary_hire.tpl.html
+++ b/design/templates/OpenGame/mrc_mercenary_hire.tpl.html
@@ -109,8 +109,8 @@ function mrc_change(mercenary_id)
                 </script>
               <!-- ENDIF -->
 
-              <!-- IF ! .officer.level --><span class="error">{L_mrc_msg_error_no_resource}</span><br /><!-- ENDIF -->
-              <!-- IF ! officer.CAN_BUY --><a href="techtree.php"><span class="error">{L_mrc_msg_error_requirements}</span></a><br /><!-- ENDIF -->
+              <!-- IF ! .officer.level --><br /><span class="error">{L_mrc_msg_error_no_resource}</span><!-- ENDIF -->
+              <!-- IF ! officer.CAN_BUY --><br /><a href="techtree.php"><span class="error">{L_mrc_msg_error_requirements}</span></a><!-- ENDIF -->
             <!-- ENDIF -->
           </form>
 
