INT-misc-34a11.10: Navbar research icon replaced

--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -24,7 +24,7 @@
           <!-- INCLUDE eco_queue -->
           <div style="display: inline-block; position: relative; width: 128px; height: 64px; margin-right: 3px;">
             <a href="buildings.php?mode=research">
-              <img style="position: absolute; left: 25%; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_research_64x64.png" height="100%" alt="{L_Research}" title="{L_Research}">
+              <img style="position: absolute; left: 0; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_research_128x64.png" height="100%" alt="{L_Research}" title="{L_Research}">
               <!-- IF $QUE_NOT_EMPTY -->
               <span style="position: absolute; width: 100%; height: 100%;left: 0; top: 0;" class="alpha50">
                 <div id="topnav_{QUE_ID}"></div>
