ADM-feat-34a12: MySQL server info. Fully rewrote of MD5 encoding utility

--- a/design/templates/OpenGame/admin/admin_tools.tpl.html
+++ b/design/templates/OpenGame/admin/admin_tools.tpl.html
@@ -1,9 +1,9 @@
-<br>
 <h1>{L_adm_tools}</h1>
 <table>
-  <tr><th><a href="admin/tools.php?mode=1">{L_adm_tools_reloadConfig}</a></th></tr>
-  <tr><th><a href="admin/md5enc.php">{L_adm_md5}</a></th></tr>
-  <tr><th><a href="admin/tools.php?mode=2">{L_adm_update_force}</a></th></tr>
-  <tr><th><a href="admin/tools.php?mode=3">{L_adm_update_repeat}</a></th></tr>
-  <tr><th><a href="admin/tools.php?mode=4">phpinfo()</a></th></tr>
+  <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_INFO_PHP}">phpinfo()</a></th></tr>
+  <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_INFO_MYSQL}">{L_adm_tool_mysql_page_header}</a></th></tr>
+  <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_CONFIG_RELOAD}">{L_adm_tools_reloadConfig}</a></th></tr>
+  <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_MD5}">{L_adm_tool_md5_header}</a></th></tr>
+  <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_FORCE_LAST}">{L_adm_update_repeat}</a></th></tr>
+  <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_FORCE_ALL}">{L_adm_update_force}</a></th></tr>
 </table>
