--- a/design/templates/OpenGame/admin/md5enc.tpl.html
+++ b/design/templates/OpenGame/admin/md5enc.tpl.html
@@ -1,19 +1,17 @@
-<br><br>
-<h2>{md5_title}</h2>
-<form method="post" action="">
-<table width="305" border="0" cellspacing="2" cellpadding="0" style="color:#FFFFFF">
-<tr>
-	<td class="c" colspan="6">{md5_pswcyp}</td>
-</tr>
-<tr>
-	<th width="130">{md5_psw}</th>
-	<th width="171"><input type="text" name="md5q" value="{md5_md5}"></th>
-</tr><tr>
-	<th width="130">{md5_pswenc}</th>
-	<th width="171"><input type="text" name="md5w" value="{md5_enc}"></th>
-</tr><tr>
-	<th width="130">&nbsp;</th>
-	<th width="171"><input type="submit" name="ok" value="{md5_doit}"></th>
-</tr>
-</table>
+<h2>{L_adm_tool_md5_header}</h2>
+<form method="post">
+  <table>
+    <tr>
+      <td class="c_l">{L_adm_tool_md5_password}</td>
+      <td class="c_l">
+        <input type="text" name="string" value="{STRING}">
+        <input type="submit" name="ok" value="{L_adm_tool_md5_encode}">
+      </td>
+    </tr>
+
+    <tr>
+      <th>{L_adm_tool_md5_hash}</th>
+      <th><input type="text" name="md5w" value="{MD5}" size="32"></th>
+    </tr>
+  </table>
 </form>
