--- a/design/templates/OpenGame/left_menu.tpl.html
+++ b/design/templates/OpenGame/left_menu.tpl.html
@@ -1,10 +1,10 @@
 <div id="sn_menu">
   <table width="100%" cellspacing="0" cellpadding="0" id="left_menu" align="left">
-    <tr><th id="server_name">{C_game_name}</th></tr>
-
-    <tr><td class="c_c"><img border="0" src="design/images/supernova.png" alt="supernova.ws" /><br />
+    <tr><th id="server_name">{C_game_name}<br />
       {L_sys_from} {C_server_start_date}
-    </td></tr>
+    </th></tr>
+
+    <tr><td class="c_c"><img border="0" src="design/images/supernova.png" alt="supernova.ws" /></td></tr>
 
     <!-- IF USER_AUTHLEVEL > 0 -->
     <tr>
