--- a/design/templates/OpenGame/menu.tpl.html
+++ b/design/templates/OpenGame/menu.tpl.html
@@ -3,12 +3,13 @@
   <!-- BEGIN menu -->
     <tr><!-- IF menu.LEVEL == 'header' --><!-- DEFINE $TX = 'th' --><!-- ELSE --><!-- DEFINE $TX = 'td' --><!-- ENDIF -->
       <{$TX}
-        <!-- IF menu.ID --> id="{menu.ID}"<!-- ENDIF -->
+        <!-- IF menu.ID && ! menu.LINK --> id="{menu.ID}"<!-- ENDIF -->
         <!-- IF menu.CLASS --> class="{menu.CLASS}"<!-- ENDIF -->
         <!-- IF menu.TITLE --> title="{menu.TITLE}"<!-- ELSEIF menu.ALT --> title="{menu.ALT}"<!-- ENDIF -->
       >
         <!-- IF menu.LINK --><a href="{menu.LINK}"<!-- IF menu.BLANK --> target="_blank"<!-- ENDIF -->><!-- ENDIF -->
         <!-- IF menu.SPAN --><span class="{menu.SPAN}"><!-- ENDIF -->
+        <!-- IF menu.ID --><span id="{menu.ID}"><!-- ENDIF -->
         <!-- IF menu.LEVEL == 'header' && menu.LINK -->[&nbsp;<!-- ENDIF -->
 
         <!-- IF menu.TYPE == 'image' -->
@@ -18,7 +19,7 @@
         <!-- ENDIF -->
 
         <!-- IF menu.LEVEL == 'header' && menu.LINK -->&nbsp;]<!-- ENDIF -->
-        <!-- IF menu.SPAN --></span><!-- ENDIF -->
+        <!-- IF menu.SPAN || (menu.ID && menu.LINK) --></span><!-- ENDIF -->
         <!-- IF menu.LINK --></a><!-- ENDIF -->
       </{$TX}>
     </tr>
