--- a/design/templates/OpenGame/simple_header.tpl.html
+++ b/design/templates/OpenGame/simple_header.tpl.html
@@ -10,8 +10,7 @@
     <!--[if IE]>
     <link rel="stylesheet" type="text/css" href="{-path_prefix-}design/css/global-ie.css" />
     <![endif]-->
-    <link rel="stylesheet" type="text/css" href="{-path_prefix-}{dpath}default.css" />
-    <link rel="stylesheet" type="text/css" href="{-path_prefix-}{dpath}formate.css" />
+    <link rel="stylesheet" type="text/css" href="{-path_prefix-}{dpath}skin.css" />
     <meta name="keywords" content="ogame,огейм,ога,supernova,сверхновая,бесплатная,free,браузерка,онлайн стратегия,онлайновая стратегия,играть,игра,ogame скрипт,xnova" />
     <meta name="description" content="Сверхновая - онлайн стратегия браузерка огейм доступна играть бесплатно" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
