--- a/skins/EpicBlue/skin.css
+++ b/skins/EpicBlue/skin.css
@@ -189,53 +189,87 @@ h1
   text-align: center;
 }
 
-.lm_overview {
+#menu_planet_overview, #menu_empire_overview, #menu_empire_mercenaries {
   color: #999933;
 }
 
-.lm_fleet {
+#menu_admin
+{
+  color: lime;
+}
+
+#menu_affiliates, #menu_planet_fleets, #menu_empire_fleets
+{
   color: #CC3333;
 }
 
-.lm_buildings {
+#menu_rules
+{
+  color: orange;
+}
+
+#menu_faq
+{
+  color: yellow;
+}
+
+#menu_news
+{
+  color: lime;
+}
+
+#menu_planet_structures /* .lm_buildings */
+{
   color: #669933;
 }
 
-.lm_shipyard {
+#menu_planet_shipyard, #menu_planet_defense /* .lm_shipyard */
+{
   color: #993399;
 }
 
-.lm_techtree {
+#menu_empire_emperor
+{
+  color: purple
+}
+
+#menu_info_research, #menu_empire_techtree /* .lm_techtree */
+{
   color: #999933;
 }
 
-.lm_universe {
+#menu_empire_universe /* .lm_universe */
+{
   color: #999966;
 }
 
-.lm_chatally, .lm_chat
+#menu_ally_chat, #menu_comm_chat /* .lm_chatally, .lm_chat */
 {
   color: #996699;
 }
 
-.lm_forum
+#menu_comm_forum /* .lm_forum */
 {
   color: #0066CC;
 }
 
-.lm_simulator {
+#menu_utils_simulator /* .lm_simulator */
+{
   color: #FF9966;
 }
 
-.lm_search {
+#menu_utils_search /* .lm_search */
+{
   color: #887766;
 }
 
-.lm_options {
+#menu_options /* .lm_options */
+{
   color: #CCCC66;
 }
 
-.lm_logout {
+#menu_logout /* .lm_logout */
+{
   color: #993333;
 }
 
@@ -334,4 +368,315 @@ div .ui-dialog-content table { background: #344055; }
 .ui-widget-content
 {
   color: white;
+}
+
+/* Universe status styles */
+.allymember {
+  color: lime;
+}
+
+.myplanet {
+  color: red;
+}
+
+.noob {
+  color: #a0ffa0;
+}
+
+.protected {
+  color: yellow;
+}
+
+.strong {
+  color: #ffa0a0;
+}
+
+.vacation {
+  color: skyblue;
+}
+
+.player_active {
+  font-weight: bold;
+}
+
+.inactive {
+/*  color: CCCCCC;*/
+  font-weight: normal;
+}
+
+.longinactive {
+/*  color: 999999;*/
+  font-weight: normal;
+  font-style: italic;
+}
+
+.banned {
+  text-decoration: line-through;
+}
+
+.admin {
+  text-decoration: blink;
+  color: purple;
+}
+
+/* Flying fleet & message color coding */
+.flight {
+}
+
+.return {
+}
+
+.holding {
+}
+
+*.ownattack, .mnl_attaque {
+  color: yellow;
+}
+
+*.ownfederation {
+  color: #33CC00;
+}
+
+*.owndestroy {
+  color: gold;
+}
+
+*.ownhold {
+  color: #80a0C0;
+}
+
+*.ownmissile {
+  color: sienna;
+}
+
+*.ownespionage, *.mnl_spy, .mnl_spy td {
+  color: orange;
+}
+
+*.owntransport, .mnl_transport {
+  color: lime;
+}
+
+*.owndeploy {
+  color: lightgreen;
+}
+
+*.ownharvest, .mnl_exploit {
+  color: green;
+}
+
+*.owncolony {
+  color: blue;
+}
+
+*.ownexpedition, .mnl_expedition {
+  color: lightblue;
+}
+
+.flight .ownattack a, .flight .owncolony a, .flight .owndeploy a, .flight .owndestroy a,
+.flight .ownespionage a, .flight .ownfederation a, .flight .ownharvest a, .flight .ownhold a,
+.flight .ownmissile a, .flight .owntransport a, .flight .ownexpedition a
+{
+  color: #E6EBFB;
+}
+
+*.attack {
+  color: red;
+}
+
+.flight .attack a {
+  color: #E6EBFB;
+}
+
+*.colony {
+  color: lime;
+}
+
+.flight .colony a {
+  color: #E6EBFB;
+}
+
+*.deploy {
+  color: lime;
+}
+
+.flight .deploy a {
+  color: #E6EBFB;
+}
+
+*.destroy {
+  color: gold;
+}
+
+.flight .destroy a {
+  color: #E6EBFB;
+}
+
+*.espionage {
+  color: red;
+}
+
+.flight .espionage a {
+  color: #E6EBFB;
+}
+
+*.federation {
+  color: #CC0000;
+}
+
+.flight .federation a {
+  color: #E6EBFB;
+}
+
+*.harvest {
+  color: lime;
+}
+
+.flight .harvest a {
+  color: #E6EBFB;
+}
+
+*.hold {
+  color: #80a0C0;
+}
+
+.flight .hold a {
+  color: #E6EBFB;
+}
+
+*.missile {
+  color: red;
+}
+
+*.transport {
+  color: lime;
+}
+
+.flight .transport a {
+  color: #E6EBFB;
+}
+
+.combatreport {
+  color: red;
+}
+
+.espionagereport {
+  color: orange;
+}
+
+.timeremaining {
+  color: orange;
+}
+
+.mnl_outbox, .mnl_outbox *
+{
+  background-color: #000000;
+}
+
+.mnl_joueur, .mnl_joueur *
+{
+  background-color: #114444;
+}
+
+.mnl_exploit, .mnl_exploit *
+{
+/*  background-color: #999999;*/
+}
+
+.mnl_buildlist, .mnl_buildlist *
+{
+  color: #000066;
+}
+
+.mnl_alliance, .mnl_alliance *
+{
+  background-color: #446666;
+}
+
+.msg_admin, .msg_admin *
+{
+  color: #9900ff !important;
+  background-color: #ffffff;
+}
+
+.new_message, .new_message *
+{
+  color: #000000;
+  background-color: #ffffff;
+}
+
+/* Message & numbers color coding */
+.ok, .success, .positive {
+  color: lime;
+}
+
+.notice, .zero, .neutral {
+  color: yellow;
+}
+
+.warning {
+  color: orange;
+}
+
+.error, .negative {
+  color: red;
+}
+
+.ok_bg, .success_bg, .positive_bg {
+  background-color: darkgreen;
+}
+
+.notice_bg, .zero_bg, .neutral_bg {
+  background-color: #AAAA00;
+}
+
+.warning_bg {
+  background-color: #924200;
+}
+
+.error_bg, .negative_bg {
+  background-color: darkred;
+}
+
+.errormessage a, .success a, .notice a, .warning a, .error a {
+  text-decoration: underline;
+}
+
+/* Resources color coding*/
+.metal{
+  color: darkgrey;
+}
+
+.crystal{
+  color: cyan;
+}
+
+.deuterium{
+  color: #800080;
+}
+
+.overall{
+  color: white;
+}
+
+.metal_bg{
+  background-color: darkgrey;
+}
+
+.crystal_bg{
+  background-color: cyan;
+}
+
+.deuterium_bg{
+  background-color: #800080;
+}
+
+.overall_ng{
+  background-color: white;
+}
+
+.battle_report_link
+{
+  color: black;
+  background-color: white;
 }
