STAT-feat-34a18: Statistics display rewrote

--- a/design/css/global.css
+++ b/design/css/global.css
@@ -257,3 +257,8 @@ body .ui-dialog, div .ui-dialog-content { background: transparent; border: none;
 {
   color: yellow;
 }
+
+.same_alliance, .same_player
+{
+  color: #33CCFF;
+}
