--- a/design/templates/OpenGame/simple_header.tpl.html
+++ b/design/templates/OpenGame/simple_header.tpl.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="{-path_prefix-}{dpath}jquery.css" />
 
     <link rel="stylesheet" type="text/css" href="{-path_prefix-}design/css/global.css" />
+    <link rel="stylesheet" type="text/css" href="{-path_prefix-}design/css/global_server.css" />
     <!--[if IE]>
     <link rel="stylesheet" type="text/css" href="{-path_prefix-}design/css/global-ie.css" />
     <![endif]-->
