--- a/design/templates/OpenGame/planet_overview.tpl.html
+++ b/design/templates/OpenGame/planet_overview.tpl.html
@@ -46,7 +46,7 @@ function doit (order, galaxy, system, planet, planettype, shipcount) {
 
     <!-- IF .announces -->
     <table width=519>
-      <tr><td colspan=2 class="c">{L_news_title}</td></tr>
+      <tr><td colspan=2 class="c"><a href=announce.php>{L_news_title}</a></td></tr>
       <!-- INCLUDE news_list -->
     </table>
   <!-- ENDIF -->
@@ -76,17 +76,18 @@ function doit (order, galaxy, system, planet, planettype, shipcount) {
 
   <table width="519">
     <tr>
-      <td style="white-space: nowrap;" class="c" colspan=5>
+      <th style="white-space: nowrap;" class="c_c" colspan=5>
         <div class="fl">{PLANET_TYPE_TEXT} "{PLANET_NAME}" <a href="galaxy.php?mode=0&galaxy={PLANET_GALAXY}&system={PLANET_SYSTEM}">[{PLANET_GALAXY}:{PLANET_SYSTEM}:{PLANET_PLANET}]</a></div>
         <div class="fr"><a href="overview.php?mode=manage"><font color="green">[{L_ov_manage}]</font></a></td></div>
-      </td>
+      </th>
     </tr>
 
     <!-- IF GATE_LEVEL -->
     <tr>
-      <td class="c_c" colspan="2">{L_tech[D_STRUC_MOON_GATE]}</td>
-      <td class="c_c" colspan="3"><a href="jumpgate.php" id="gate_jump_time">
+      <th class="c_c" colspan="2">{L_tech[D_STRUC_MOON_GATE]}</th>
+      <th class="c_c" colspan="3"><a href="jumpgate.php">
         <!-- IF GATE_JUMP_REST_TIME -->
+        {L_ov_gate_time_left} <span  id="gate_jump_time" class="error"></span>
         <script type="text/javascript"><!--
           sn_timers.unshift({
             id: 'gate_jump_time',
@@ -101,21 +102,21 @@ function doit (order, galaxy, system, planet, planettype, shipcount) {
           });
         // --></script>
         <!-- ELSE -->
-          {L_gate_ready}
+          <span class="ok">{L_gate_ready}</span>
         <!-- ENDIF --></a>
-      </td>
+      </th>
     </tr>
     <!-- ENDIF -->
 
     <tr>
-      <td class="c_c" width="120" rowspan="7">
+      <td class="c_c" width="120" rowspan="6">
         <!-- DEFINE $PLANET_ID = '{PLANET_ID}' -->
         <!-- INCLUDE planet_governor -->
       </td>
 
       <th width=100 align="center">{buildings_on_planet}</th>
-      <th colspan="3" style="position: relative; border: 1px solid rgb(153, 153, 255); padding: 0px; height: 100%;">
-        <div style="position: relative; width: 100%; height: 100%;">
+      <th colspan="3" style="position: relative; padding: 0px; height: 100%;">
+        <div style="position: relative; width: 100%; height: 100%; border: 1px solid rgb(153, 153, 255); ">
           <!-- IF PLANET_FILL >= 100 -->
             <!-- DEFINE $BAR_COLOR = '#C00000' -->
           <!-- ELSEIF PLANET_FILL >= 80 -->
@@ -127,6 +128,13 @@ function doit (order, galaxy, system, planet, planettype, shipcount) {
           <div style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; vertical-align: middle;">{planet_field_current}/{planet_field_max} ({PLANET_FILL}%)</div>
           &nbsp;
         </div>
+        <!-- IF PLANET_TYPE == 1 -->
+          <!-- IF SECTOR_CAN_BUY -->
+            <a href="overview.php?sector_buy=1"><span class="positive">{L_ov_sector_buy} {L_sys_for} {SECTOR_COST_TEXT} {L_sys_dark_matter_sh}</span></a>
+          <!-- ELSE -->
+            <span class="negative">{L_ov_sector_buy} {L_sys_for} {SECTOR_COST_TEXT} {L_sys_dark_matter_sh}</span>
+          <!-- ENDIF -->
+        <!-- ENDIF -->
       </th>
     </tr>
 
