--- a/design/templates/OpenGame/planet_overview.tpl.html
+++ b/design/templates/OpenGame/planet_overview.tpl.html
@@ -130,9 +130,9 @@ function doit (order, galaxy, system, planet, planettype, shipcount) {
         </div>
         <!-- IF PLANET_TYPE == 1 -->
           <!-- IF SECTOR_CAN_BUY -->
-            <a href="overview.php?sector_buy=1"><span class="positive">{L_ov_sector_buy} {L_sys_for} {SECTOR_COST_TEXT} {L_sys_dark_matter_sh}</span></a>
+            <a href="overview.php?sector_buy=1"><span class="positive">{L_sys_sector_buy} {L_sys_for} {SECTOR_COST_TEXT} {L_sys_dark_matter_sh}</span></a>
           <!-- ELSE -->
-            <span class="negative">{L_ov_sector_buy} {L_sys_for} {SECTOR_COST_TEXT} {L_sys_dark_matter_sh}</span>
+            <span class="negative">{L_sys_sector_buy} {L_sys_for} {SECTOR_COST_TEXT} {L_sys_dark_matter_sh}</span>
           <!-- ENDIF -->
         <!-- ENDIF -->
       </th>
