--- a/design/templates/OpenGame/buildings_builds.tpl.html
+++ b/design/templates/OpenGame/buildings_builds.tpl.html
@@ -5,7 +5,7 @@ var production = Array();
 var unit_selected = null;
 var eco_bld_style_probe;
 
-language = 
+language =
 {
 //  eco_que_empty: '{LA_eco_que_empty}',
   level: '{LA_level}',
@@ -186,12 +186,12 @@ var que_id = '{QUE_ID}';
           <!-- ENDIF -->
 
 
-          <span style="position: absolute; top: 18px; left: 0px; width: 100%; height: 5ex; font-size: 100%;" class="icon_alpha"> 
+          <span style="position: absolute; top: 18px; left: 0px; width: 100%; height: 5ex; font-size: 100%;" class="icon_alpha">
             {production.NAME}
           </span>
 
-          <span style="position: absolute; top: 0; left: 20%; width: 60%; height: 16px; text-align: center; font-size: 120%;" class="icon_alpha">
-            <!-- IF production.LEVEL_OLD -->{production.LEVEL_OLD}<!-- ENDIF --><!-- IF production.LEVEL_CHANGE --><!-- IF production.LEVEL_CHANGE > 0 -->+<!-- ENDIF -->{production.LEVEL_CHANGE}<!-- ENDIF -->
+          <span style="position: absolute; top: 0; left: 15%; width: 70%; height: 16px; text-align: center; font-size: 120%;" class="icon_alpha">
+            <!-- IF production.LEVEL_OLD -->{production.LEVEL_OLD}<!-- IF production.LEVEL_EXTRA --><span class="neutral">+{production.LEVEL_EXTRA}</span><!-- ENDIF --><!-- ENDIF --><!-- IF production.LEVEL_CHANGE --><!-- IF production.LEVEL_CHANGE > 0 -->+<!-- ENDIF -->{production.LEVEL_CHANGE}<!-- ENDIF -->
           </span>
 
           <!-- IF QUE_HAS_PLACE && ! production.UNIT_BUSY -->
@@ -218,13 +218,14 @@ var que_id = '{QUE_ID}';
       <!-- ENDIF -->
 
       <script type="text/javascript"><!--
-      production[{production.ID}] = 
+      production[{production.ID}] =
       {
         id: '{production.ID}',
         name: '{production.NAME}',
         level: '{production.LEVEL}',
+        extra: '{production.LEVEL_EXTRA}',
         change: '{production.CHANGE}',
-        description: '{production.DESCRIPTION}', 
+        description: '{production.DESCRIPTION}',
         unit_busy: '{production.UNIT_BUSY}',
 
         metal: '{production.METAL}',
