LNG-fix-35a2: Fixed error selecting language

--- a/design/templates/OpenGame/planet_manage.tpl.html
+++ b/design/templates/OpenGame/planet_manage.tpl.html
@@ -69,6 +69,18 @@
       </td>
     </tr>
 
+    <!-- IF PLANET_TYPE == 1 -->
+    <tr>
+      <th>{L_ov_teleport}</th>
+      <!-- IF CAN_TELEPORT -->
+      <th>{L_ov_teleport_new_coordinates}&nbsp;<input type="text" name="new_galaxy" size=3 maxlength=3 value="{PLANET_GALAXY}">:<input type="text" name="new_system" size=3 maxlength=3 value="{PLANET_SYSTEM}">:<input type="text" name="new_galaxy" size=3 maxlength=3 value="{PLANET_PLANET}"></th>
+      <th><input type="submit" name="teleport" value="{L_ov_teleport}"></th>
+      <!-- ELSE -->
+      <th colspan="2" class="error">{CAN_NOT_TELEPORT_MSG}</th>
+      <!-- ENDIF -->
+    </tr>
+    <!-- ENDIF -->
+
 
     <tr>
       <th>{L_ov_new_name}</th>
