UNI-feat-35a4: Planet teleportation

--- a/design/templates/OpenGame/_result_message.tpl.html
+++ b/design/templates/OpenGame/_result_message.tpl.html
@@ -7,6 +7,6 @@
     <!-- ELSE -->
       <!-- DEFINE $RESULT_CLASS = 'error' -->
     <!-- ENDIF -->
-    <h3 class="c_c {$RESULT_CLASS}">{result.MESSAGE}</h3>
+    <!-- IF result.MESSAGE --><h3 class="c_c {$RESULT_CLASS}">{result.MESSAGE}</h3><!-- ENDIF -->
   <!-- END result -->
 <!-- ENDIF -->
