--- a/design/templates/OpenGame/planet_manage.tpl.html
+++ b/design/templates/OpenGame/planet_manage.tpl.html
@@ -1,3 +1,5 @@
+<!-- INCLUDE _result_message -->
+
 <br />
 <form action="overview.php?mode=manage" method="POST">
   <input type="hidden" name="planet_id" value="{PLANET_ID}">
@@ -73,8 +75,8 @@
     <tr>
       <th>{L_ov_teleport}</th>
       <!-- IF CAN_TELEPORT -->
-      <th>{L_ov_teleport_new_coordinates}&nbsp;<input type="text" name="new_galaxy" size=3 maxlength=3 value="{PLANET_GALAXY}">:<input type="text" name="new_system" size=3 maxlength=3 value="{PLANET_SYSTEM}">:<input type="text" name="new_galaxy" size=3 maxlength=3 value="{PLANET_PLANET}"></th>
-      <th><input type="submit" name="teleport" value="{L_ov_teleport}"></th>
+      <th>{L_ov_teleport_new_coordinates}&nbsp;<input type="text" name="new_galaxy" size=3 maxlength=3 value="{PLANET_GALAXY}">:<input type="text" name="new_system" size=3 maxlength=3 value="{PLANET_SYSTEM}">:<input type="text" name="new_planet" size=3 maxlength=3 value="{PLANET_PLANET}"></th>
+      <th><input type="submit" name="teleport" value="{L_ov_teleport}"><br />{L_sys_for} {C_planet_teleport_cost} {L_sys_dark_matter_sh}</th>
       <!-- ELSE -->
       <th colspan="2" class="error">{CAN_NOT_TELEPORT_MSG}</th>
       <!-- ENDIF -->
