--- a/design/templates/OpenGame/planet_manage.tpl.html
+++ b/design/templates/OpenGame/planet_manage.tpl.html
@@ -71,6 +71,13 @@
       </td>
     </tr>
 
+
+    <tr>
+      <th>{L_ov_new_name}</th>
+      <th><input type="text" name="new_name" size=25 maxlength=20 value="{PLANET_NAME}"></th>
+      <th><input type="submit" name="rename" value="{L_ov_rename}"></th>
+    </tr>
+
     <!-- IF PLANET_TYPE == 1 -->
     <tr>
       <th>{L_ov_teleport}</th>
@@ -81,14 +88,14 @@
       <th colspan="2" class="error">{CAN_NOT_TELEPORT_MSG}</th>
       <!-- ENDIF -->
     </tr>
+
+    <!-- IF ! IS_CAPITAL -->
+    <tr>
+      <th colspan="3"><input type="submit" name="capital" value="{L_ov_capital}"> {L_sys_for} {C_planet_capital_cost} {L_sys_dark_matter_sh}</th>
+    </tr>
     <!-- ENDIF -->
 
-
-    <tr>
-      <th>{L_ov_new_name}</th>
-      <th><input type="text" name="new_name" size=25 maxlength=20 value="{PLANET_NAME}"></th>
-      <th><input type="submit" name="rename" value="{L_ov_rename}"></th>
-    </tr>
+    <!-- ENDIF -->
 
     <tr>
       <th>{L_colony_abandon}</th>
