INT-feat-35a6: Hevy optimization of HTML template code for Empire Overview and Planet List

--- a/design/templates/OpenGame/planet_list.tpl.html
+++ b/design/templates/OpenGame/planet_list.tpl.html
@@ -10,7 +10,7 @@
   <!-- IF $OVERVIEW && (! LIST_COLUMN_COUNT || planet.S_ROW_COUNT % LIST_COLUMN_COUNT == 0)  -->
    <tr>
   <!-- ENDIF -->
-  <th valign="top" {$CELL_CLASS} width="{$CELL_PLANET}"><center>
+  <th valign="top" {$CELL_CLASS} width="{$CELL_PLANET}" style="cursor: pointer;">
   <!-- IF planet.ID -->
     <!-- IF $OVERVIEW -->
       <!-- IF planet.MOON_ID == PLANET_ID -->{L_sys_moon} {planet.MOON_NAME}<!-- ELSE -->{planet.NAME}<!-- ENDIF --><br />[{planet.GALAXY}:{planet.SYSTEM}:{planet.PLANET}]<br>
@@ -40,75 +40,57 @@
       <!-- DEFINE $MOON_IMG_SIZE = '32%' -->
     <!-- ENDIF -->
 
-    <div style="position: relative; height: {$DEUTERIUM_BAR}px; width: {$FRAME_WIDTH}px; border: 0px solid blue;">
-      <div style="position: absolute; height: {$PLANET_IMG_SIZE}px; width: {$PLANET_IMG_SIZE}px; border: 0px solid yellow; left: 0px;">
-        <span style="position: absolute; left: 0px; top: 0px; width: 100%; height: 100%">
+    <div class="planet_list_wrap" style="height: {$DEUTERIUM_BAR}px; width: {$FRAME_WIDTH}px;">
+      <div class="left_top" style="height: {$PLANET_IMG_SIZE}px; width: {$PLANET_IMG_SIZE}px;">
+        <span class="element_fill_wrap">
           <!-- IF planet.IMAGE -->
-          <a href="overview.php?cp={planet.ID}&re=0"><img style="border-style: none;" src="{dpath}planeten/{planet.IMAGE}.jpg" height="100%" width="100%"></a>
+          <a href="overview.php?cp={planet.ID}"><img style="border-style: none;" src="{dpath}planeten/{planet.IMAGE}.jpg" height="100%" width="100%"></a>
           <!-- ELSE -->
           &nbsp;
           <!-- ENDIF -->
         </span>
 
         <!-- IF .planet.building_que -->
-          <span style="position: absolute; top: 0px; left: 0px; width: 25%; height: 25%" class="icon_alpha">
-            <a href="buildings.php?cp={planet.ID}&re=0"><img src="{D_SN_ROOT_VIRTUAL}design/images/build_building.png" height="100%" width="100%"></a>
-          </span>
-        <!-- ENDIF -->
-
-        <!-- IF planet.TECH -->
-          <span title="{planet.TECH}" style="position: absolute; top: 25%; left: 0px; width: 25%; height: 25%" class="icon_alpha">
-            <a href="buildings.php?mode=research&cp={planet.ID}&re=0"><img src="{D_SN_ROOT_VIRTUAL}design/images/build_tech.png" height="100%" width="100%"></a>
-          </span>
+        <a href="buildings.php?cp={planet.ID}"><img src="{D_SN_ROOT_VIRTUAL}design/images/build_building.png" class="icon_alpha icon_25per_left_1"></a>
         <!-- ENDIF -->
 
         <!-- IF planet.HANGAR -->
-          <span title="{planet.HANGAR}" style="position: absolute; top: 50%; left: 0px; width: 25%; height: 25%;" class="icon_alpha">
-            <a href="buildings.php?mode=fleet&cp={planet.ID}&re=0"><img src="{D_SN_ROOT_VIRTUAL}design/images/build_hangar.png" height="100%" width="100%"></a>
-          </span>
+        <a href="buildings.php?mode=fleet&cp={planet.ID}"><img src="{D_SN_ROOT_VIRTUAL}design/images/build_hangar.png" class="icon_alpha icon_25per_left_2" title="{planet.HANGAR}"></a>
         <!-- ENDIF -->
 
         <!-- IF planet.PLANET_GOVERNOR_ID && planet.PLANET_GOVERNOR_LEVEL -->
-          <span title="{planet.PLANET_GOVERNOR_NAME} {planet.PLANET_GOVERNOR_LEVEL}" style="position: absolute; top: 75%; left: 0px; width: 25%; height: 25%;" class="icon_alpha">
-            <a href="overview.php?mode=manage&cp={planet.ID}&re=0">
-              <img src="{dpath}gebaeude/{planet.PLANET_GOVERNOR_ID}.jpg" height="100%" width="100%">
-              <span style="position: absolute; bottom: 0px; left: 0px;" class="icon_alpha">{planet.PLANET_GOVERNOR_LEVEL}</span>
-            </a>
+          <span class="icon_alpha icon_25per_left_4" title="{planet.PLANET_GOVERNOR_NAME} {planet.PLANET_GOVERNOR_LEVEL}" onclick="document.location='overview.php?mode=manage&cp={planet.ID}';">
+            <img src="{dpath}gebaeude/{planet.PLANET_GOVERNOR_ID}.jpg" class="icon_fill">
+            <span class="icon_alpha planet_list_governor_level">{planet.PLANET_GOVERNOR_LEVEL}</span>
           </span>
         <!-- ENDIF -->
 
-        <span style="position: absolute; bottom: 0; right: 0; cursor: pointer;" title="{L_flt_gather_all}" class="icon_alpha" onclick="document.location='fleet.php?fleet_page=5&cp={planet.ID}&re=0'">
+        <span title="{L_flt_gather_all}" class="icon_alpha icon_25per_right_4" onclick="document.location='fleet.php?fleet_page=5&cp={planet.ID}'">
           <div class="icons icon-gather"></div>
         </span>
 
         <!-- IF planet.FLEET_OWN -->
-          <span style="position: absolute; top: 0px; left: 25%; width: 25%; height: 25%; cursor: pointer;" class="icon_alpha" onmouseover="fleet_dialog_show(this, '{planet.PLANET_FLEET_ID}')"  onclick="document.location='flying_fleets.php?cp={planet.ID}'">
-            <img src="{D_SN_ROOT_VIRTUAL}design/images/icon_fleet_own.png" height="100%" width="100%">
-          </span>
+        <a href="flying_fleets.php?cp={planet.ID}"><img src="{D_SN_ROOT_VIRTUAL}design/images/icon_fleet_own.png" class="icon_alpha icon_25per_top_2" onmouseover="fleet_dialog_show(this, '{planet.PLANET_FLEET_ID}')"></a>
         <!-- ENDIF -->
 
         <!-- IF planet.FLEET_ENEMY -->
-          <span style="position: absolute; top: 26%; left: 26%; width: 48%; height: 48%;">
-            <img src="{D_SN_ROOT_VIRTUAL}design/images/icon_warning.png" height="100%" width="100%" style="border-style: none; cursor: pointer;" onclick="javascript:window.location = '?cp={planet.ID}&re=0'">
-          </span>
+        <a href="overview.php?cp={planet.ID}"><img src="{D_SN_ROOT_VIRTUAL}design/images/icon_warning.png" class="planet_list_moon_attack"></a>
         <!-- ENDIF -->
 
         <!-- IF planet.MOON_ID -->
           <div style="position: absolute; top: 0; right: 0; width: {$MOON_IMG_SIZE}; height: {$MOON_IMG_SIZE};">
-            <a href="overview.php?cp={planet.MOON_ID}&re=0" title="{planet.MOON_NAME} [{planet.GALAXY}:{planet.SYSTEM}:{planet.PLANET}]"><img style="border-style: none;" src="{dpath}planeten/small/s_{planet.MOON_IMG}.jpg" height="100%" width="100%"></a>
+            <a href="overview.php?cp={planet.MOON_ID}" title="{planet.MOON_NAME} [{planet.GALAXY}:{planet.SYSTEM}:{planet.PLANET}]"><img src="{dpath}planeten/small/s_{planet.MOON_IMG}.jpg" class="icon_fill"></a>
 
-            <span style="position: absolute; bottom: 0; right: 0; cursor: pointer;" title="{L_flt_gather_all}" class="icon_alpha" onclick="document.location='fleet.php?fleet_page=5&cp={planet.MOON_ID}&re=0'">
-              <div class="icons icon-gather"></div>
+            <span title="{L_flt_gather_all}" class="icon_alpha icon_25per_right_4">
+              <div class="icons icon-gather" onclick="document.location='fleet.php?fleet_page=5&cp={planet.MOON_ID}'"></div>
             </span>
 
-            <span style="position: absolute; left: 0; width: 100%; top: 90%; height: 10%; overflow: hidden;">
+            <span class="planet_list_submoon_fields">
               <div class="fl" style="position: relative; left: 0px; height: 100%; width: {planet.MOON_FILL}%; background-color: <!-- IF planet.MOON_FILL >= 100 -->red<!-- ELSEIF planet.MOON_FILL > 80 -->yellow<!-- ELSE -->green<!-- ENDIF -->;"></div>
             </span>
 
             <!-- IF planet.MOON_ENEMY != 0 -->
-              <span style="position: absolute; top: 15%; left: 15%; width: 70%; height: 70%;">
-                <img src="{D_SN_ROOT_VIRTUAL}design/images/icon_warning.png" height="100%" width="100%" style="border-style: none; cursor: pointer;" onclick="javascript:window.location = '?cp={planet.MOON_ID}&re=0'">
-              </span>
+            <img src="{D_SN_ROOT_VIRTUAL}design/images/icon_warning.png" class="planet_list_moon_attack" onclick="document.location='overview.php?cp={planet.MOON_ID}'">
             <!-- ENDIF -->
           </div>
         <!-- ENDIF -->
@@ -123,10 +105,9 @@
       <!-- ELSE -->
         <!-- DEFINE $FIELD_COLOR = 'positive_bg' -->
       <!-- ENDIF -->
-      <div class="{$FIELD_COLOR}" style="position: absolute; top: 0px; left: {$METAL_BAR}px; height: {$PLANET_IMG_SIZE}px; width: {$RESOURCE_BAR}px; overflow: hidden;">
-        <div class="metal_bg" style="position: absolute; bottom: 0px; left: 0px; width: 100%; height: {planet.METAL_PERCENT}%"></div>
+      <div class="{$FIELD_COLOR} planet_list_res_bar" style="height: {$PLANET_IMG_SIZE}px; width: {$RESOURCE_BAR}px; left: {$METAL_BAR}px;">
+        <div class="planet_list_bar metal_bg" style="height: {planet.METAL_PERCENT}%"></div>
       </div>
-
       <!-- IF planet.CRYSTAL_PERCENT < 50 --> 
         <!-- DEFINE $FIELD_COLOR = 'negative_bg' -->
       <!-- ELSEIF planet.CRYSTAL_PERCENT < 80 --> 
@@ -136,34 +117,34 @@
       <!-- ELSE -->
         <!-- DEFINE $FIELD_COLOR = 'positive_bg' -->
       <!-- ENDIF -->
-      <div class="{$FIELD_COLOR}" style="position: absolute; top: 0px; left: {$CRYSTAL_BAR}px; height: {$PLANET_IMG_SIZE}px; width: {$RESOURCE_BAR}px; overflow: hidden;">
-        <div class="crystal_bg" style="position: absolute; bottom: 0px; left: 0px; width: 100%; height: {planet.CRYSTAL_PERCENT}%"></div>
+      <div class="{$FIELD_COLOR} planet_list_res_bar" style="height: {$PLANET_IMG_SIZE}px; width: {$RESOURCE_BAR}px; left: {$CRYSTAL_BAR}px;">
+        <div class="planet_list_bar crystal_bg" style="height: {planet.CRYSTAL_PERCENT}%"></div>
+      </div>
+      <!-- IF planet.DEUTERIUM_PERCENT < 50 -->
+        <!-- DEFINE $FIELD_COLOR = 'negative_bg' -->
+      <!-- ELSEIF planet.DEUTERIUM_PERCENT < 80 -->
+        <!-- DEFINE $FIELD_COLOR = 'warning_bg' -->
+      <!-- ELSEIF planet.DEUTERIUM_PERCENT < 100 -->
+        <!-- DEFINE $FIELD_COLOR = 'neutral_bg' -->
+      <!-- ELSE -->
+        <!-- DEFINE $FIELD_COLOR = 'positive_bg' -->
+      <!-- ENDIF -->
+      <div class="{$FIELD_COLOR} planet_list_res_bar" style="height: {$PLANET_IMG_SIZE}px; width: {$RESOURCE_BAR}px; left: {$DEUTERIUM_BAR}px;">
+        <div class="planet_list_bar deuterium_bg" style="height: {planet.DEUTERIUM_PERCENT}%"></div>
       </div>
 
-      <!-- IF planet.DEUTERIUM_PERCENT < 50 --> 
-        <!-- DEFINE $FIELD_COLOR = 'negative_bg' -->
-      <!-- ELSEIF planet.DEUTERIUM_PERCENT < 80 --> 
-        <!-- DEFINE $FIELD_COLOR = 'warning_bg' -->
-      <!-- ELSEIF planet.DEUTERIUM_PERCENT < 100 --> 
-        <!-- DEFINE $FIELD_COLOR = 'neutral_bg' -->
-      <!-- ELSE -->
+      <!-- IF planet.FILL < 50 -->
         <!-- DEFINE $FIELD_COLOR = 'positive_bg' -->
-      <!-- ENDIF -->
-      <div class="{$FIELD_COLOR}" style="position: absolute; top: 0px; left: {$DEUTERIUM_BAR}px; height: {$PLANET_IMG_SIZE}px; width: {$RESOURCE_BAR}px; overflow: hidden;">
-        <div class="deuterium_bg" style="position: absolute; bottom: 0px; left: 0px; width: 100%; height: {planet.DEUTERIUM_PERCENT}%"></div>
-      </div>
-      <!-- IF planet.FILL < 50 --> 
-        <!-- DEFINE $FIELD_COLOR = 'positive_bg' -->
-      <!-- ELSEIF planet.FILL < 80 --> 
+      <!-- ELSEIF planet.FILL < 80 -->
         <!-- DEFINE $FIELD_COLOR = 'neutral_bg' -->
-      <!-- ELSEIF planet.FILL < 100 --> 
+      <!-- ELSEIF planet.FILL < 100 -->
         <!-- DEFINE $FIELD_COLOR = 'warning_bg' -->
       <!-- ELSE -->
         <!-- DEFINE $FIELD_COLOR = 'negative_bg' -->
       <!-- ENDIF -->
-      <div style="width: {$PLANET_IMG_SIZE}px; height: 9px; overflow: hidden; top: {$PLANET_IMG_SIZE}px; left: 0px; position: absolute;">
-        <div style="position: absolute; left: 0px; top: 0px; height: 100%; width: {planet.FILL}%;" class="{$FIELD_COLOR}"></div>
-        <div style="position: absolute; left: 0px; top: -1px; height: 100%; width: 100%; font-size: 9px; font-weight: bold;">{planet.FIELDS_CUR}&nbsp;/&nbsp;{planet.FIELDS_MAX}</div>
+      <div class="planet_list_fill_bar" style="width: {$PLANET_IMG_SIZE}px; top: {$PLANET_IMG_SIZE}px;">
+        <div style="width: {planet.FILL}%;" class="{$FIELD_COLOR} empire_cell_filler"></div>
+        <div class="planet_list_fields">{planet.FIELDS_CUR}&nbsp;/&nbsp;{planet.FIELDS_MAX}</div>
       </div>
     </div>
 
@@ -179,10 +160,10 @@
     <!-- ELSE -->{L_sys_no_task}<!-- ENDIF -->
 
     <!-- IF $OVERVIEW -->
-    <br><br>
+    <br /><br />
     <!-- ENDIF -->
   <!-- ENDIF -->
-  </center></th>
+  </th>
   <!-- IF $OVERVIEW && (! LIST_COLUMN_COUNT || (planet.S_ROW_COUNT + 1) % LIST_COLUMN_COUNT == 0 || planet.S_LAST_ROW)  -->
     </tr>
   <!-- ENDIF -->
