--- a/design/templates/OpenGame/universe.tpl.html
+++ b/design/templates/OpenGame/universe.tpl.html
@@ -129,7 +129,7 @@ uni_row[{galaxyrow.PLANET_NUM}] =
       <tr class=myplanet><td colspan=2>{L_uni_legend_myplanet}</td></tr>\
       <tr class=allymember><td colspan=2>{L_uni_legend_allyplanet}</td></tr>\
       <tr><td class=c colspan=2>{L_sys_player}</td></tr>\
-      <tr><td>{L_uni_protected_player}</td><td><img src=\"{D_SN_ROOT_VIRTUAL}images/birthday.png\" alt=\"{galaxyrow.USER_BIRTHDAY}\" title=\"{galaxyrow.USER_BIRTHDAY}\"></td></tr>\
+      <tr><td>{L_sys_birthday}</td><td><img src=\"{D_SN_ROOT_VIRTUAL}images/birthday.png\" alt=\"{galaxyrow.USER_BIRTHDAY}\" title=\"{galaxyrow.USER_BIRTHDAY}\"></td></tr>\
       <tr class=protected><td>{L_uni_protected_player}</td><td>{L_uni_protected_player_shortcut}</td></tr>\
       <tr class=noob><td>{L_Weak_player}</td><td>{L_weak_player_shortcut}</td></tr>\
       <tr class=strong><td>{L_Strong_player}</td><td>{L_strong_player_shortcut}</td></tr>\
