--- a/design/css/global.css
+++ b/design/css/global.css
@@ -262,3 +262,187 @@ body .ui-dialog, div .ui-dialog-content { background: transparent; border: none;
 {
   color: #33CCFF;
 }
+
+.element_fill_wrap
+{
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%
+}
+
+.empire_cell
+{
+  cursor: pointer;
+  position: relative;
+  height: 100%;
+}
+
+.empire_cell_wrapper
+{
+  position: relative;
+  width: 100%;
+  height: 13px;
+}
+
+.empire_cell_filler
+{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+}
+
+.empire_cell_number
+{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  vertical-align: middle;
+}
+
+.planet_list_wrap
+{
+  position: relative;
+  border: 0px solid blue;
+}
+
+.planet_list_bar
+{
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+}
+
+.planet_list_fields
+{
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  height: 100%;
+  width: 100%;
+  font-size: 9px;
+  font-weight: bold;
+}
+
+.planet_list_moon_attack
+{
+  position: absolute;
+  top: 15%;
+  left: 15%;
+  width: 70%;
+  height: 70%;
+  cursor: pointer;
+}
+
+.planet_list_submoon_fields
+{
+  position: absolute;
+  left: 0;
+  width: 100%;
+  top: 90%;
+  height: 10%;
+  overflow: hidden;
+}
+
+.planet_list_submoon_attack
+{
+  position: absolute;
+  top: 26%;
+  left: 26%;
+  width: 48%;
+  height: 48%;
+}
+
+.planet_list_fill_bar
+{
+  height: 9px;
+  overflow: hidden;
+  left: 0px;
+  position: absolute;
+}
+
+.planet_list_res_bar
+{
+  position: absolute;
+  top: 0px;
+  overflow: hidden;
+}
+
+.planet_list_governor_level
+{
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+}
+
+.left_top
+{
+  position: absolute;
+  left: 0px;
+  top: 0px;
+}
+
+.icon_25per_left_1
+{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 25%;
+  height: 25%
+}
+
+.icon_25per_left_2
+{
+  position: absolute;
+  top: 25%;
+  left: 0px;
+  width: 25%;
+  height: 25%
+}
+
+.icon_25per_left_3
+{
+  position: absolute;
+  top: 50%;
+  left: 0px;
+  width: 25%;
+  height: 25%;
+}
+
+.icon_25per_left_4
+{
+  position: absolute;
+  top: 75%;
+  left: 0px;
+  width: 25%;
+  height: 25%;
+}
+
+.icon_25per_right_4
+{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.icon_25per_top_2
+{
+  position: absolute;
+  top: 0px;
+  left: 25%;
+  width: 25%;
+  height: 25%;
+}
+
+.icon_fill
+{
+  height: 100%;
+  width: 100%;
+  border-style: none;
+  cursor: pointer;
+}
