--- a/design/templates/OpenGame/imperium.tpl.html
+++ b/design/templates/OpenGame/imperium.tpl.html
@@ -5,14 +5,14 @@
 
 <h2>{L_imp_overview}</h2>
 <table border="0" cellpadding="0" cellspacing="1" align=center><tbody>
-  <tr><td class="c" colspan="{amount}" align="left">{L_sys_empire}</td></tr>
+  <tr><th class="c_l" colspan="{amount}">{L_sys_planets}</td></tr>
 
   <tr>
     <th width="{$CELL_HEADER}">{L_imp_name}</th>
     <!-- BEGIN planet -->
-      <th class="c" width="{$CELL_PLANET}" style="width: 75px;">
+      <td class="c_c" width="{$CELL_PLANET}">
         <!-- IF planet.ID -->
-          <a href="overview.php?cp={planet.ID}&re=0">{planet.NAME}</a>
+          <a href="overview.php?cp={planet.ID}">{planet.NAME}</a>
         <!-- ELSE -->
           {planet.NAME}
         <!-- ENDIF -->
@@ -28,11 +28,11 @@
   <tr>
     <th width="{$CELL_HEADER}">{L_sys_coordinates}</th>
     <!-- BEGIN planet -->
-      <th width="{$CELL_PLANET}" class="c">
+      <td width="{$CELL_PLANET}" class="c_c">
         <!-- IF planet.ID -->
-          <a href="overview.php?cp={planet.ID}&re=0">{planet.COORDINATES}</a>
+          <a href="overview.php?cp={planet.ID}">{planet.COORDINATES}</a>
         <!-- ENDIF -->&nbsp;
-      </th>
+      </td>
     <!-- END planet -->
   </tr>
 
@@ -84,8 +84,8 @@
       <!-- ELSE -->
         <!-- DEFINE $FIELD_COLOR = 'positive' -->
       <!-- ENDIF -->
-      <td width="{$CELL_PLANET}" class="c_c">
-        <a href="resources.php?cp={planet.ID}&re=0&planettype={planet.TYPE}">{planet.METAL_CUR}<br><span class="{$FIELD_COLOR}">{planet.METAL_PROD}</span></a>
+      <td class="c_c">
+        <a href="resources.php?cp={planet.ID}">{planet.METAL_CUR}<br><span class="{$FIELD_COLOR}">{planet.METAL_PROD}</span></a>
       </td>
     <!-- END planet -->
   </tr>
@@ -101,8 +101,8 @@
       <!-- ELSE -->
         <!-- DEFINE $FIELD_COLOR = 'positive' -->
       <!-- ENDIF -->
-      <td width="{$CELL_PLANET}" class="c_c">
-        <a href="resources.php?cp={planet.ID}&re=0&planettype={planet.TYPE}">{planet.CRYSTAL_CUR}<br><span class="{$FIELD_COLOR}">{planet.CRYSTAL_PROD}</span></a>
+      <td class="c_c">
+        <a href="resources.php?cp={planet.ID}">{planet.CRYSTAL_CUR}<br><span class="{$FIELD_COLOR}">{planet.CRYSTAL_PROD}</span></a>
       </td>
     <!-- END planet -->
   </tr>
@@ -118,33 +118,32 @@
       <!-- ELSE -->
         <!-- DEFINE $FIELD_COLOR = 'positive' -->
       <!-- ENDIF -->
-      <th class="c">
-        <a href="resources.php?cp={planet.ID}&re=0&planettype={planet.TYPE}">{planet.DEUTERIUM_CUR}<br><span class="{$FIELD_COLOR}">{planet.DEUTERIUM_PROD}</span></a>
-      </th>
+      <td class="c_c">
+        <a href="resources.php?cp={planet.ID}">{planet.DEUTERIUM_CUR}<br /><span class="{$FIELD_COLOR}">{planet.DEUTERIUM_PROD}</span></a>
+      </td>
     <!-- END planet -->
   </tr>
   <tr>
     <th width="{$CELL_HEADER}">{L_sys_energy}<br>{L_imp_production}</th>
-    <!-- BEGIN planet --><th class="c"><a href="resources.php?cp={planet.ID}&re=0&planettype={planet.TYPE}">{planet.ENERGY_CUR}<br>{planet.ENERGY_MAX}</a></th><!-- END planet -->
+    <!-- BEGIN planet --><td class="c_c"><a href="resources.php?cp={planet.ID}">{planet.ENERGY_CUR}<br />{planet.ENERGY_MAX}</a></td><!-- END planet -->
   </tr>
 
   <!-- BEGIN prods -->
   <tr>
     <!-- IF prods.MODE -->
-    <th width="{$CELL_HEADER}">{prods.NAME}</th>
+    <td class="c_c" width="{$CELL_HEADER}">{prods.NAME}</td>
     <!-- ELSE -->
-    <td width="{$CELL_HEADER}" class="c" colspan="{amount}">{prods.NAME}</td>
+    <th width="{$CELL_HEADER}" class="c_l" colspan="{amount}">{prods.NAME}</th>
     <!-- ENDIF -->
-    
-    <!-- BEGIN planet -->
-    <th style="cursor: pointer; position: relative; height: 100%;" onclick="document.location='buildings.php?mode={prods.MODE}&cp={prods.planet.ID}&re=0&planettype={prods.planet.TYPE}';">
 
+    <!-- BEGIN planet -->
+    <th class="empire_cell" onclick="document.location='buildings.php?cp={prods.planet.ID}&mode={prods.MODE}';">
       <!-- IF prods.planet.LEVEL_PLUS_GREEN > 0 -->
         <!-- DEFINE $PLUS_CLASS = 'positive' -->
       <!-- ELSEIF prods.planet.LEVEL_PLUS_GREEN < 0 -->
         <!-- DEFINE $PLUS_CLASS = 'negative' -->
       <!-- ENDIF -->
-      
+
       <!-- IF prods.planet.PERCENT < 0 || prods.planet.LEVEL == 0 -->
         <!-- DEFINE $FIELD_COLOR = '' -->
       <!-- ELSEIF prods.planet.PERCENT < 50 --> 
@@ -157,9 +156,9 @@
         <!-- DEFINE $FIELD_COLOR = 'positive_bg' -->
       <!-- ENDIF -->
 
-      <div style="position: relative; width: 100%; height: 13px;">
-        <span style="position: absolute; top: 0px; left: 0px; width: {prods.planet.PERCENT}%; height:100%;" class="{$FIELD_COLOR}"> </span>
-        <span style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; vertical-align: middle;">{prods.planet.LEVEL}<!-- IF prods.planet.LEVEL_PLUS_GREEN --><span class="{$PLUS_CLASS}">{prods.planet.LEVEL_PLUS_GREEN}</span><!-- ENDIF --><!-- IF prods.planet.LEVEL_PLUS_YELLOW --><font color="yellow">{prods.planet.LEVEL_PLUS_YELLOW}</font><!-- ENDIF --></span>
+      <div class="empire_cell_wrapper">
+        <!-- IF prods.planet.PERCENT --><span style="width: {prods.planet.PERCENT}%;" class="empire_cell_filler {$FIELD_COLOR}"></span><!-- ENDIF -->
+        <span class="empire_cell_number">{prods.planet.LEVEL}<!-- IF prods.planet.LEVEL_PLUS_GREEN --><span class="{$PLUS_CLASS}">{prods.planet.LEVEL_PLUS_GREEN}</span><!-- ENDIF --><!-- IF prods.planet.LEVEL_PLUS_YELLOW --><font color="yellow">{prods.planet.LEVEL_PLUS_YELLOW}</font><!-- ENDIF --></span>
       </div>
     </th>
     <!-- END planet -->
