SYS-feat-35a8.1: Basic MVC support

--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -1,4 +1,4 @@
-<h2>{L_opt_header}</h2>
+<h1>{L_opt_header}</h1>
 <!-- INCLUDE _result_message -->
 
 <!-- IF CHANGE_PASS -->
@@ -11,7 +11,7 @@
   <!-- ENDIF -->
 <!-- ENDIF -->
 
-<form action="options.php?mode=change" method="post" name="fOptions" enctype="multipart/form-data">
+<form action="index.php?page=options&mode=change" method="post" name="fOptions" enctype="multipart/form-data">
   <table width="519px">
     <tbody>
       <!-- IF IS_ADMIN -->
