INT-feat-35a8.3: Global player name rendering engine

--- a/design/templates/OpenGame/imperator.tpl.html
+++ b/design/templates/OpenGame/imperator.tpl.html
@@ -25,7 +25,7 @@
 <table width=519>
   <tr>
     <th colspan=4 class="c_c">
-      <span class="fl">{L_imp_imperator} {user_username} <img src="{D_SN_ROOT_VIRTUAL}{dpath}images/sex_{user_sex}.png"> {L_sys_from} {REGISTRATION_DATE}</span>
+      <span class="fl">{L_imp_imperator} {user_username} {L_sys_from} {REGISTRATION_DATE}</span>
       <span class="fr"></span>
     </th>
   </tr>
