--- a/design/templates/OpenGame/universe.tpl.html
+++ b/design/templates/OpenGame/universe.tpl.html
@@ -66,7 +66,7 @@ jQuery.extend(language, {
 });
 
 var users = new Array();
-<!-- BEGIN users --><!-- IF users.ID -->users[{users.ID}] = {name: '{users.NAME_JS}', rank: '{users.RANK}', ally_title: '{users.ALLY_TITLE}', ally_tag: '{users.ALLY_TAG}', sex: '{users.SEX}', avatar: '{users.AVATAR}'};<!-- ENDIF --><!-- END users -->
+<!-- BEGIN users --><!-- IF users.ID -->users[{users.ID}] = {name: '{users.NAME_JS}', rank: '{users.RANK}', ally_title: '{users.ALLY_TITLE}', ally_tag: '{users.ALLY_TAG}', /*sex: '{users.SEX}', */avatar: '{users.AVATAR}'};<!-- ENDIF --><!-- END users -->
 
 var allies = new Array();
 <!-- BEGIN alliances --><!-- IF alliances.ID -->allies[{alliances.ID}] = {'name': '{alliances.NAME_JS}', 'rank' : '{alliances.RANK}','members': '{alliances.MEMBERS}', 'url': '{alliances.URL}', avatar: '{alliances.AVATAR}'};
