MOD-feat-35a8.21: Module dependencies and automatic sort-load functionality

--- a/design/templates/OpenGame/ali_info.tpl.html
+++ b/design/templates/OpenGame/ali_info.tpl.html
@@ -37,7 +37,7 @@
         <!-- ENDIF -->
       <!-- ENDIF -->
       <span class="{$ALLY_MEMBERS_CLASS}">{ALLY_MEMBERS}<!-- IF ALI_BONUS_MEMBERS -->/{ALI_BONUS_MEMBERS} {L_ali_info_bonus_rate}: {ALLY_BONUS_RATE}<!-- ENDIF --></span>
-      <!-- IF ! EXTERNAL --><a href="alliance.php?mode=memberslist" class="fr">[ {Members_list} ]</a><!-- ENDIF -->
+      <!-- IF ! EXTERNAL --><br /><a href="alliance.php?mode=memberslist">[ {Members_list} ]</a><!-- ENDIF -->
     </th>
   </tr>
   <!-- IF EXTERNAL && ! USER_ALLY_ID -->
