UBE-misc-35a9.5: Removed unused rapidfire code

--- a/design/templates/OpenGame/info_buildings_fleet.tpl.html
+++ b/design/templates/OpenGame/info_buildings_fleet.tpl.html
@@ -4,14 +4,13 @@
   </tr>
 
   <tr>
-    <th colspan="3">
-      <table><tbody>
-        <tr>
-          <td><img src="{dpath}gebaeude/{image}.gif" align="top" border="0" height="120" width="120"></td>
-          <td>{description}<br><br>{rf_info_to}{rf_info_fr}</td>
-        </tr>
-      </tbody></table>
-    </th>
+    <td align="justify" colspan="3">
+      <img src="{dpath}gebaeude/{image}.gif" align="top" border="0" height="120" width="120" class="fl" style="margin: 7px">
+      {description}<br />
+      <br/ >
+      {rf_info_to}
+      {rf_info_fr}
+    </td>
   </tr>
 
   <tr class="c_c">
